publishing files when updating pubreq status to completed